demos/11-cicd-tvapp-ecs/artifacts/cfn-templates/load-balancer.yaml
---
AWSTemplateFormatVersion: 2010-09-09


Parameters:

  Subnet1:
    Type: String

  Subnet2:
    Type: String

  VpcId:
    Type: String


Resources:

  SecurityGroupPublic:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: PublicSecurityGroup
      GroupDescription: !Sub ${AWS::StackName}-alb
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
      VpcId: !Ref VpcId

  SecurityGroupECSTask:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ECSTaskSecurityGroup
      GroupDescription: Microservice Name Service/Task Security Group
      VpcId: !Ref VpcId

  IngressRuleWebapp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
      SourceSecurityGroupId: !GetAtt SecurityGroupPublic.GroupId
      GroupId: !GetAtt SecurityGroupECSTask.GroupId

  ALBPublic:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt SecurityGroupPublic.GroupId
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALBPublic
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ALBPublic
    Properties:
      VpcId: !Ref VpcId
      Port: 8080
      Protocol: HTTP
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /api/v1/name/1
      Name: mytvapp
      HealthCheckProtocol: HTTP
      UnhealthyThresholdCount: 10
      TargetType: ip


Outputs:
  TargetGroup:
    Value: !Ref TargetGroup

  ServiceUrl:
    Description: URL of the load balancer for the sample service.
    Value: !Sub http://${ALBPublic.DNSName}

  SecurityGroup:
    Value: !Ref SecurityGroupPublic

  SecurityGroupECSTask:
    Value: !Ref SecurityGroupECSTask

  ALBPublic:
    Value: !Ref ALBPublic

  ALBPublicCNAME:
    Value: !GetAtt ALBPublic.DNSName
